Setup website deployment and release automation

--- a/website/index.html
+++ b/website/index.html
@@ -311,7 +311,7 @@
                     </div>
                     <div class="platform-downloads">
                         <a href="https://github.com/Adith1207/CosmoNaut/releases/latest"
-                            class="star-border-container sm full-width">
+                            class="star-border-container download-btn primary sm full-width">
                             <div class="border-gradient-bottom"></div>
                             <div class="border-gradient-top"></div>
                             <div class="inner-content">
@@ -323,7 +323,7 @@
                             </div>
                         </a>
                         <a href="https://github.com/Adith1207/CosmoNaut/releases/latest"
-                            class="star-border-container sm secondary full-width">
+                            class="star-border-container download-btn secondary sm secondary full-width">
                             <div class="border-gradient-bottom"></div>
                             <div class="border-gradient-top"></div>
                             <div class="inner-content">Portable .exe</div>
@@ -350,7 +350,7 @@
                     </div>
                     <div class="platform-downloads">
                         <a href="https://github.com/Adith1207/CosmoNaut/releases/latest"
-                            class="star-border-container sm full-width">
+                            class="star-border-container download-btn primary sm full-width">
                             <div class="border-gradient-bottom"></div>
                             <div class="border-gradient-top"></div>
                             <div class="inner-content">
@@ -362,7 +362,7 @@
                             </div>
                         </a>
                         <a href="https://github.com/Adith1207/CosmoNaut/releases/latest"
-                            class="star-border-container sm secondary full-width">
+                            class="star-border-container download-btn secondary sm secondary full-width">
                             <div class="border-gradient-bottom"></div>
                             <div class="border-gradient-top"></div>
                             <div class="inner-content">Intel Chip</div>
@@ -384,7 +384,7 @@
                     </div>
                     <div class="platform-downloads">
                         <a href="https://github.com/Adith1207/CosmoNaut/releases/latest"
-                            class="star-border-container sm">
+                            class="star-border-container download-btn primary sm">
                             <div class="border-gradient-bottom"></div>
                             <div class="border-gradient-top"></div>
                             <div class="inner-content">
@@ -396,7 +396,7 @@
                             </div>
                         </a>
                         <a href="https://github.com/Adith1207/CosmoNaut/releases/latest"
-                            class="star-border-container sm secondary">
+                            class="star-border-container download-btn secondary sm secondary">
                             <div class="border-gradient-bottom"></div>
                             <div class="border-gradient-top"></div>
                             <div class="inner-content">AppImage</div>
