consolidate website and setup cloud release automation

--- a/website/index.html
+++ b/website/index.html
@@ -29,7 +29,7 @@
                 </a>
                 <ul class="nav-links">
                     <li><a href="#capabilities">Capabilities</a></li>
-                    <li><a href="#solutions">Solutions</a></li>
+                    <li><a href="odyssey/index.html">Odyssey</a></li>
                     <li><a href="#download">Download</a></li>
                     <li><a href="#resources">Resources</a></li>
                     <li><a href="#insights">Insights</a></li>
