--- a/website/odyssey/index.html
+++ b/website/odyssey/index.html
@@ -173,8 +173,8 @@
                 <h2>The New <span class="gradient-text">Digital Frontier</span></h2>
                 <p>Your journey with CosmoNaut has just begun. Transform your workspace today.</p>
                 <div class="cta-group">
-                    <a href="../website/index.html#download" class="btn-main">Download Now</a>
-                    <a href="../website/index.html" class="btn-sub">Back to Base</a>
+                    <a href="../index.html#download" class="btn-main">Download Now</a>
+                    <a href="../index.html" class="btn-sub">Back to Base</a>
                 </div>
             </div>
         </section>
